--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,16 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.3
+  provider: ^6.0.3
+  firebase_core: ^1.20.1
+  firebase_auth: ^3.6.3
+  cloud_firestore: ^3.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
+  change_app_package_name: ^1.1.0
 
 flutter:
 
