--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.3
+  flutter_rating_bar: ^4.0.1
   provider: ^6.0.3
   firebase_core: ^1.20.1
   firebase_auth: ^3.6.3
@@ -31,4 +32,20 @@ flutter:
   assets:
     - assets/
     - assets/images/
+
+  fonts:
+    - family: Metro
+      fonts:
+      - asset: assets/fonts/metropolis.regular.otf
+      - asset: assets/fonts/metropolis.light.otf
+        weight: 200
+      - asset: assets/fonts/metropolis.medium.otf
+        weight: 400
+      - asset: assets/fonts/metropolis.semi-bold.otf
+        weight: 500
+      - asset: assets/fonts/metropolis.bold.otf
+        weight: 600
+      - asset: assets/fonts/metropolis.black.otf
+        weight: 700
+
 
