--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.3
   flutter_rating_bar: ^4.0.1
+  skeletons: ^0.0.3
   provider: ^6.0.3
   firebase_core: ^1.20.1
   firebase_auth: ^3.6.3
