--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_svg: ^1.1.3
   flutter_rating_bar: ^4.0.1
   skeletons: ^0.0.3
+  badges: ^2.0.3
   provider: ^6.0.3
   firebase_core: ^1.20.1
   firebase_auth: ^3.6.3
